--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Savitha's Notes"
 
 theme = "0x32"              # theme name
 disableKinds = []           # disable stuffs
-enableGitInfo = true        # valuable git information
+enableGitInfo = false        # valuable git information
 enableEmoji = true          # enables emoji support in content files
 
 [markup]
